--- a/Gmt/templates/views/doctor.hbs
+++ b/Gmt/templates/views/doctor.hbs
@@ -3,14 +3,15 @@
 {{>header}}
 <div class="marginAlign">
 </div>
-<div class="row ">
+
+<div class="row no-margin ">
 	<div class="col-lg-8 col-sm-7 col-xs-8 col-md-8 border no-padding">
 		<div class=" row doc">
 			<div class="row doc_profile">
 				<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1 no-padding">
 				</div>
 				<div class="col-lg-3 col-sm-3 col-xs-3 col-md-3 no-padding">
-					<img src="{{cloudinaryUrl doctor.imageOuter}}">
+					<img src="">
 				</div>
 
 				<div class="col-lg-5 col-sm-5 col-xs-5 col-md-5 no-padding">
@@ -68,6 +69,7 @@
 				</li>
 			</ul>
 		</nav>
+
 		<div id="navstick" class="">
 			<section id="section1">
 				<h4 id="bio"></h4>
@@ -81,6 +83,7 @@
 					</div>
 				</div>
 			</section>
+
 			<section id="section2">
 				<h4 id="over">
 					<div class="row">
@@ -163,6 +166,7 @@
 					</div>
 				{{/each}}
 			</section>
+
 			<section id="section4">
 				<h4 id="over">
 					<div class="row">
@@ -189,7 +193,7 @@
 
 		<div class="form frm_doctor" style="margin-top:-10px;	background-color: #f6f6f6;	">
 			<h5>Request a Consultation</h5>
-			<div class="row">
+			<div class="row no-margin">
 				<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
 				</div>
 				<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
@@ -269,12 +273,12 @@
 						</div>
 
 						<div class="form-group row form_fields">
-							<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+							<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
 								<input type="text" class="form-control" id="age" placeholder="Age" name="age">
 							</div>
 							<div class="col-lg-2 col-md-0 col-sm-0 col-xs-2">
 							</div>
-							<div class="col-lg-6 col-md-8 col-sm-8 col-xs-6" style="padding-top: 10px;">
+							<div class="col-lg-7 col-md-8 col-sm-8 col-xs-6" style="padding-top: 10px;">
 								<label for="gender" class="gender">Sex:</label>
 								<label class="radio-inline">
 									<input type="radio" name="gender" class="value" value="Male">M</label>
