--- a/Gmt/templates/views/doctors.hbs
+++ b/Gmt/templates/views/doctors.hbs
@@ -57,7 +57,7 @@
 			{{#each doctors}}
 				<div class="col-lg-4 col-sm-6 col-xs-12 col-md-4 doctor ">
 					<div class="thumbnail">
-						<img src="{{cloudinaryUrl imageOuter}}" class="doct">
+						<img src="" class="doct">
 						<p>{{name}}</p>
 						<span>{{{summary}}}</span>
 						<span style="padding-left:40px;">
