--- a/Gmt/templates/views/partials/header.hbs
+++ b/Gmt/templates/views/partials/header.hbs
@@ -8,12 +8,12 @@
 						<div class="row">
 							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
 							</div>
-							<!-- <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-toggle">
+							<button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-toggle">
 								<span class="sr-only">Toggle navigation</span>
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
-							</button> -->
+							</button>
 							<div class="col-lg-10  col-md-10 col-sm-10 col-xs-10">
 								<a href="/" class="navbar-brand" style="width:100%;height:auto;outline:none">
 									<img alt="Goa Medical Travel" src="/images/gmtwhite.png" class="logo" style="width:60%;height:auto;margin-bottom: 5px; margin-top: 5px;  margin-left: -5px;" />
@@ -45,14 +45,8 @@
 											</li>
 										{{/each}}
 										<li class="btn-connect" style="">
-											<button type="submit" class=" btn-md connect" style="background-color:rgba(0,0,0,0.0);border:2px solid #FF6C6F;color:#FF6C6F;font-family:SourceSansPro-Regular;font-size:16.5px;" data-toggle="modal" data-target="#myModal1">Connect</button>
+											<button type="submit" class=" btn-md connect" style="background-color:rgba(0,0,0,0.0);border:2px solid #FF6C6F;color:#FF6C6F;font-family:SourceSansPro-Regular;font-size:16.5px;" data-toggle="modal" data-target="#myModalhome">Connect</button>
 										</li>
-										<!-- <li style="padding-left:35px;color:rgb(220,220,220);padding-top: 10px;color">
-												<i class="fa fa-envelope-o fa-2x"></i>
-											<i class="fa fa-skype fa-2x" style="padding-left: 10px; padding-right: 10px; "></i>
-											<i class="fa fa-whatsapp fa-2x" ></i>
-</li> -->
-										<!-- background-color: #ff6c6f;	border-color:#ff6c6f;	box-shadow: 0 3px 0 0 #B24B4D;outline:none; -->
 									</ul>
 								</div>
 							</div>
@@ -73,27 +67,41 @@
 			</div>
 		</div>
 	</div>
+	<!-- </div> -->
+</div>
 
-	<!-- Modal -->
-	<div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-		<div class="modal-dialog" role="document">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-						<span aria-hidden="true">&times;</span>
-					</button>
-					<h4 class="modal-title" id="myModalLabel">Modal title</h4>
+
+<!-- Modal -->
+<div class="modal fade" id="myModalhome" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" >
+	<div class="modal-dialog" role="document" style="width:35%;position:relative;top:100px;">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+				<h4 class="modal-title" id="myModalLabel">Connect With Us</h4>
+			</div>
+			<div class="modal-body">
+
+					<div class="row">
+						<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2"></div>
+					<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1">	<i class="fa fa-envelope-o"></i></div>
+					<div class="col-lg-9 col-md-9 col-sm-9 col-xs-9"><p style="font-family:SourceSansPro-Regular;font-size:16px;">info@goamedicaltravel.com</p></div>
 				</div>
-				<div class="modal-body">
-					<p>Mail us at </p>
-					<p>contact us at</p>
+
+
+					<div class="row">
+						<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2"></div>
+					<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1">	<span class="glyphicon glyphicon-phone"></span></div>
+					<div class="col-lg-9 col-md-9 col-sm-9 col-xs-9"><p style="font-family:SourceSansPro-Regular;font-size:16px;">+91 832 240 5900</p></div>
 				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-					<button type="button" class="btn btn-primary">Save changes</button>
-				</div>
+
+					</div>
+			<!-- </div> -->
+			<div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
+				<!-- <button type="button" class="btn btn-primary">Save changes</button> -->
 			</div>
 		</div>
 	</div>
-	<!-- </div> -->
 </div>
