--- a/Gmt/public/styles/site.css
+++ b/Gmt/public/styles/site.css
@@ -4936,6 +4936,13 @@ button.close {
 .no-padding {
   padding: 0; }
 
+.no-margin {
+  margin: 0; }
+
+body.modal-open {
+  overflow: inherit;
+  padding-right: 0 !important; }
+
 *[hidden] {
   display: none; }
 
@@ -4957,24 +4964,6 @@ button.close {
   position: absolute;
   right: 25px;
   top: 16px; }
-
-.package-type > p {
-  position: absolute;
-  top: 0;
-  padding-top: 8px;
-  padding-right: 18px;
-  width: 100%;
-  font-family: SourceSansPro-Semibold;
-  font-size: 18px;
-  text-align: right; }
-
-.package-caption > p {
-  font-family: SourceSansPro-Regular;
-  color: #2b2b2b;
-  text-align: justify;
-  padding-left: 7px;
-  padding-right: 7px;
-  padding-top: 5px; }
 
 #navprocedure, #navdoctor, #navprovider {
   width: 100%; }
@@ -5036,12 +5025,6 @@ table tr:last-child td:first-child {
 /* bottom-right border-radius */
 table tr:last-child td:last-child {
   border-bottom-right-radius: 6px; }
-
-.package_para > p {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  font-family: SourceSansPro-Regular;
-  font-size: 16px; }
 
 .exp {
   border: 1px solid #cac6c6;
@@ -5131,7 +5114,8 @@ table tr:last-child td:last-child {
   outline: none;
   font-family: SourceSansPro-Semibold;
   font-size: 16px;
-  padding: 2px 10px; }
+  padding: 2px 10px;
+  float: right; }
 
 .q {
   height: auto; }
@@ -5169,7 +5153,6 @@ table tr:last-child td:last-child {
   background-color: white; }
 
 .marginAlign {
-  overflow: hidden;
   margin-left: 0;
   margin-right: 0;
   margin-top: 112px; }
@@ -5184,10 +5167,6 @@ table tr:last-child td:last-child {
   margin: 0; }
   .procedure .border {
     border-right: 1px solid #ededed; }
-
-.image {
-  width: 100%;
-  height: auto; }
 
 .para > p {
   height: auto;
@@ -5412,15 +5391,17 @@ table tr:last-child td:last-child {
     border-color: #53c8ab;
     box-shadow: 0 3px 0 0 #317866; }
 
-.provider_procedures .btn-primary.procedure_btn {
-  background-color: #ff6c6f;
-  color: white;
-  font-size: 16px;
-  font-family: SourceSansPro-Regular;
-  height: auto;
-  padding: 1px 12px;
-  border-color: #ff6c6f;
-  box-shadow: 0 3px 0 0 #b24b4d; }
+.provider_procedures {
+  padding-bottom: 10px; }
+  .provider_procedures .btn-primary.procedure_btn {
+    background-color: #ff6c6f;
+    color: white;
+    font-size: 16px;
+    font-family: SourceSansPro-Regular;
+    height: auto;
+    padding: 1px 12px;
+    border-color: #ff6c6f;
+    box-shadow: 0 3px 0 0 #b24b4d; }
 
 .form {
   background-color: #ededed;
@@ -5623,6 +5604,25 @@ a:focus {
       margin-top: 10px;
       filter: grayscale(1); }
 
+.home-carousel img {
+  width: 100%;
+  height: auto; }
+.home-carousel .carousel-caption {
+  left: 72px;
+  top: 310px;
+  text-align: left; }
+  .home-carousel .carousel-caption h2 {
+    margin-top: 0;
+    font-size: 35px;
+    font-family: SourceSansPro-Bold; }
+  .home-carousel .carousel-caption h3 {
+    margin-top: 0;
+    font-size: 31px;
+    font-family: SourceSansPro-Semibold; }
+  .home-carousel .carousel-caption .arrow {
+    width: 8%;
+    padding-top: 10px; }
+
 .index_choose .title {
   font-size: 32px;
   padding-top: 30px;
@@ -5668,6 +5668,13 @@ a:focus {
       color: white;
       font-size: 16px; }
 
+.index_help .title {
+  font-size: 32px;
+  padding-top: 30px;
+  padding-bottom: 5px;
+  color: #959595;
+  text-align: center;
+  font-family: SourceSansPro-Semibold; }
 .index_help .null {
   border: none; }
 .index_help .image1 {
@@ -5678,12 +5685,43 @@ a:focus {
   font-family: SourceSansPro-Semibold;
   text-align: center;
   font-size: 18px;
-  padding-top: 15px; }
+  padding-top: 5px;
+  color: #2f2f2f; }
 
 .thumbnail > span {
   font-family: SourceSansPro-Regular;
   text-align: center;
   font-size: 14px; }
+
+.index_say {
+  padding-left: 45px;
+  padding-right: 45px;
+  border-color: white; }
+  .index_say .image {
+    padding: 5px;
+    border-radius: 50%;
+    width: 130px;
+    height: 130px;
+    margin-bottom: 20px; }
+  .index_say .block {
+    margin-bottom: 0;
+    border-color: #53c8ab;
+    border-radius: 10px; }
+    .index_say .block h4 {
+      font-family: SourceSansPro-Semibold;
+      text-align: center;
+      font-size: 24px; }
+    .index_say .block p {
+      padding-top: 0;
+      font-family: SourceSansPro-Regular;
+      margin-top: -5px; }
+    .index_say .block .link {
+      text-align: center; }
+      .index_say .block .link a {
+        text-decoration: none;
+        font-family: SourceSansPro-Regular;
+        color: white;
+        font-size: 16px; }
 
 .btn-primary.raise {
   border: 1px solid #53c8ab;
@@ -5751,18 +5789,6 @@ a:focus {
   display: table;
   width: 100%;
   height: 447px; }
-
-.packagePic {
-  background: url("../images/Packages265(1).jpg") no-repeat center center;
-  background-repeat: no-repeat;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  display: table;
-  width: 100%;
-  position: relative;
-  height: 265px; }
 
 .picture {
   background: url("../images/Specialities265(1).png") no-repeat center center;
@@ -5929,67 +5955,3 @@ a:focus {
 /*
     Common
 */
-.wizard-steps-panel {
-  position: relative;
-  height: 4em; }
-
-.wizard-steps-panel .step-number {
-  display: inline-block;
-  text-align: center;
-  font-size: 26px;
-  position: relative; }
-
-.wizard-steps-panel .step-number .number {
-  width: 1.7em;
-  height: 1.7em;
-  background-color: #dedede;
-  color: #5a5a5a;
-  margin-left: calc(50% - 1.7em / 2);
-  border: 4px solid #dedede;
-  border-radius: 1.7em; }
-
-.wizard-steps-panel .step-number.doing .number, .wizard-steps-panel .step-number.doing .number:after, .wizard-steps-panel .step-number.doing .number:before {
-  background-color: #FF5454;
-  border: 4px solid #FF5454;
-  color: white; }
-
-.wizard-steps-panel .step-number.done .number, .wizard-steps-panel .step-number.done .number:after, .wizard-steps-panel .step-number.done .number:before {
-  background-color: #79C447;
-  border: 4px solid #79C447;
-  color: white; }
-
-.wizard-steps-panel .step-number .number:before {
-  content: ' ';
-  position: absolute;
-  border: 4px solid #dedede;
-  border-radius: 4px;
-  left: -4px;
-  right: calc( 50% + 1.4em/2);
-  top: calc( 1.4em / 2); }
-
-.wizard-steps-panel .step-number .number:after {
-  content: ' ';
-  position: absolute;
-  border: 4px solid #dedede;
-  border-radius: 4px;
-  left: calc( 50% + 1.4em/2);
-  right: -4px;
-  top: calc( 1.4em / 2); }
-
-.wizard-steps-panel.steps-quantity-1 .step-number {
-  width: 99%; }
-
-.wizard-steps-panel.steps-quantity-2 .step-number {
-  width: 49%; }
-
-.wizard-steps-panel.steps-quantity-3 .step-number {
-  width: 32%; }
-
-.wizard-steps-panel.steps-quantity-4 .step-number {
-  width: 24%; }
-
-.wizard-steps-panel.steps-quantity-5 .step-number {
-  width: 19%; }
-
-.wizard-steps-panel.steps-quantity-6 .step-number {
-  width: 15%; }
