--- a/Gmt/templates/views/layouts/default.hbs
+++ b/Gmt/templates/views/layouts/default.hbs
@@ -10,7 +10,7 @@
 	<link href="/styles/site.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<link href="/styles/star-rating.min.css" rel="stylesheet">
-	
+
 			<!-- <link href="/styles/scrolling-nav.css" rel="stylesheet" > -->
 	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous"> -->
 
@@ -55,7 +55,7 @@
 
 	<!-- </div> -->
 
-	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" style="margin-top: 100px; ">
+	<!-- <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" style="margin-top: 100px; ">
 		<div class="modal-dialog" role="document" style="width:60%;">
 			<div class="modal-content">
 				<div class="modal-header">
@@ -80,8 +80,7 @@
 						<div class="col-lg-3 col-xs-3 col-sm-3 col-md-3">
 							<input type="text" class="form-control" id="exampleInputEmail2" placeholder="Last Name">
 						</div>
-						<!-- <div class="col-lg-1 col-xs-1 col-sm-1 col-md-1">
-			</div> -->
+
 					</form>
 
 					<form class="form-horizontal row">
@@ -125,7 +124,8 @@
 						</div>
 						<div class="col-lg-1 col-xs-1 col-sm-1 col-md-1">
 						</div>
-					</form>
+					</form> -->
+
 					<!-- <img id="captcha" src="library/vender/securimage/securimage_show.php" alt="CAPTCHA Image" />
 		      <a href="#" onclick="document.getElementById('captcha').src = 'library/vender/securimage/securimage_show.php?' + Math.random(); return false" class="btn btn-info btn-sm">Show a Different Image</a><br/>
 		      <div class="form-group" style="margin-top: 10px;">
@@ -198,7 +198,9 @@
 	 </textarea>
 	 <input type="hidden" name="recaptcha_response_field" value="manual_challenge">
 </noscript> -->
-					<form class="form-horizontal row">
+
+
+					<!-- <form class="form-horizontal row">
 						<div class="col-lg-5 col-xs-5 col-sm-5 col-md-5">
 						</div>
 
@@ -232,7 +234,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 	{{!-- //- jQuery 1.11.1 is included by default, and required by both Bootstrap //- and the KeystoneJS Content Editor. If you are not targeting IE8, //- you can upgrade to 2.1.3 (also bundled) for better performance. --}}
 	<script src="/js/jquery/jquery-1.11.2.min.js"></script>
