--- a/Gmt/templates/views/partials/headerhome.hbs
+++ b/Gmt/templates/views/partials/headerhome.hbs
@@ -3,7 +3,7 @@
 	<div role="navigation" class="navbar navbar-inverse navbar-static-top" style="border-width: 0px;border-radius:0px;background-color:rgba(0,0,0,0.3);border-bottom:0px;">
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-lg-4" >
+				<div class="col-lg-4">
 					<div class="navbar-header">
 						<div class="row">
 							<div class="col-lg-2">
@@ -14,7 +14,7 @@
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 							</button>
-							<div class="col-lg-10" >
+							<div class="col-lg-10">
 								<a href="/" class="navbar-brand" style="width:100%;height:auto;outline:none">
 									<img alt="Goa Medical Travel" src="/images/gmtwhite.png" style="width:60%;height:auto;margin-bottom: 5px; margin-top: 5px;  margin-left: -5px;" />
 								</a>
@@ -29,10 +29,10 @@
 								<div class="collapse navbar-collapse">
 									<ul class="nav navbar-nav navbar-right">
 										{{# each navs}}
-										<li {{#ifeq ../section key}}class="active" {{else}}{{/ifeq}} style="font-family: SourceSansPro-Regular;font-size:16.5px;">
-											<a href="{{ href }}" style="color:rgb(235,235,235);;background-color:rgba(0,0,0,0);">{{ label }}</a>
-										</li>
-										{{/each}}
+											<li {{#ifeq ../section key}} class="active" {{else}} {{/ifeq}} style="font-family: SourceSansPro-Regular;font-size:16.5px;">
+												<a href="{{ href }}" style="color:rgb(235,235,235);;background-color:rgba(0,0,0,0);">{{ label }}</a>
+											</li>
+											{{/each}}
 									</ul>
 								</div>
 							</div>
@@ -40,19 +40,19 @@
 								<div class="collapse navbar-collapse" style="padding-right: 15px;">
 									<ul class="nav navbar-nav navbar-right">
 										{{# each navLinks}}
-										<li {{#ifeq ../section key}}class="active" {{else}}{{/ifeq}} style="font-family: SourceSansPro-Regular;font-size:16.5px;padding-left:20px;">
-											<a href="{{ href }}" style="outline:none;color:rgb(235,235,235);background-color:rgba(0,0,0,0);">{{ label }}</a>
-										</li>
-										{{/each}}
-										<li style="padding-left:35px;">
-											<button type="submit" class=" btn-md connect" style="background-color:rgba(0,0,0,0.0);border:2px solid white;color:white;font-family:SourceSansPro-Regular;font-size:16.5px;">Connect</button>
-										</li>
-										<!-- <li style="padding-left:35px;color:rgb(220,220,220);padding-top: 10px;color">
+											<li {{#ifeq ../section key}} class="active" {{else}} {{/ifeq}} style="font-family: SourceSansPro-Regular;font-size:16.5px;padding-left:20px;">
+												<a href="{{ href }}" style="outline:none;color:rgb(235,235,235);background-color:rgba(0,0,0,0);">{{ label }}</a>
+											</li>
+											{{/each}}
+											<li style="padding-left:35px;">
+												<button type="submit" class=" btn-md connect" style="background-color:rgba(0,0,0,0.0);border:2px solid white;color:white;font-family:SourceSansPro-Regular;font-size:16.5px;" data-toggle="modal" data-target="#myModalhome">Connect</button>
+											</li>
+											<!-- <li style="padding-left:35px;color:rgb(220,220,220);padding-top: 10px;color">
 												<i class="fa fa-envelope-o fa-2x"></i>
 											<i class="fa fa-skype fa-2x" style="padding-left: 10px; padding-right: 10px; "></i>
 											<i class="fa fa-whatsapp fa-2x" ></i>
 </li> -->
-										<!-- background-color: #ff6c6f;	border-color:#ff6c6f;	box-shadow: 0 3px 0 0 #B24B4D;outline:none; -->
+											<!-- background-color: #ff6c6f;	border-color:#ff6c6f;	box-shadow: 0 3px 0 0 #B24B4D;outline:none; -->
 									</ul>
 								</div>
 							</div>
@@ -65,4 +65,46 @@
 		</div>
 	</div>
 	<!-- </div> -->
+</div>
+<!-- Modal -->
+<div class="modal fade" id="myModalhome" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+	<div class="modal-dialog" role="document" style="width:35%;position:relative;top:100px;">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+				<h4 class="modal-title" id="myModalLabel">Connect With Us</h4>
+			</div>
+			<div class="modal-body">
+				<div class="row">
+					<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2"></div>
+					<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"> <i class="fa fa-envelope-o"></i></div>
+					<div class="col-lg-9 col-md-9 col-sm-9 col-xs-9">
+						<p style="font-family:SourceSansPro-Regular;font-size:16px;">info@goamedicaltravel.com</p>
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2"></div>
+					<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
+						<span class="glyphicon glyphicon-phone"></span>
+					</div>
+					<div class="col-lg-9 col-md-9 col-sm-9 col-xs-9">
+						<p style="font-family:SourceSansPro-Regular;font-size:16px;">+91 832 240 5900</p>
+					</div>
+				</div>
+				<div class="row" style="margin-top:20px;">
+					<div class="col-lg-5 col-md-5 col-sm-5 col-xs-5"></div>
+						<div class="col-lg-7 col-md-7 col-sm-7 col-xs-7">
+       <button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
+		 </div>
+	 </div>
+			</div>
+			<!-- <div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
+				<button type="button" class="btn btn-primary">Save changes</button>
+			</div> -->
+		</div>
+	</div>
 </div>
